[gd_scene load_steps=5 format=3 uid="uid://dw0ldpbjakbqj"]

[ext_resource type="Script" uid="uid://dqv1pwyis1bdm" path="res://slay_the_wc/Cards/Scenes/Scripts/Card.gd" id="1_8koj5"]
[ext_resource type="Resource" uid="uid://m3obtvi78eim" path="res://slay_the_wc/Cards/Data/Pentamonstres/pentamite.tres" id="2_5ipkk"]
[ext_resource type="PackedScene" uid="uid://dqtac4737yusy" path="res://slay_the_wc/Cards/UICard/UICard.tscn" id="3_5ipkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxnh5"]
size = Vector2(120, 170)

[node name="Card" type="Node2D"]
script = ExtResource("1_8koj5")
data = ExtResource("2_5ipkk")

[node name="UiCard" parent="." instance=ExtResource("3_5ipkk")]
offset_left = -60.0
offset_top = -85.0
offset_right = 60.0
offset_bottom = 85.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yxnh5")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="mouse_entered" from="UiCard" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UiCard" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
